prevent graph canvas from z-index manipulation

--- a/src/styles/style.styl
+++ b/src/styles/style.styl
@@ -115,6 +115,9 @@ $sink
     width 100%
     height 100%
 
+    canvas
+      z-index: 0
+
     .vis-network-tooltip
       @extend $box
       position absolute
